--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs",
   "version": "1.0.0",
-  "description": "LoCyan Doc",
+  "description": "VuePress Doc",
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
